[project]
name = "agentmanu"
version = "1.0.0"
description = "(AI) Agent Manual Helper for Unix Commands"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"ipykernel>=6.29.5",
	"langchain-cerebras>=0.5.0",
	"langchain-community>=0.3.26",
	"langchain-google-genai>=2.1.5",
	"langchain-groq>=0.3.2",
	"python-dotenv>=1.1.0",
	"rich>=14.0.0",
]
